# paperproof-indexer-reference

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  NOTICE.md  README.md
deploy/: docker-compose.yml
docs/: README.md  airdrop.md  api.md  architecture.md  cli.md  deployment.md  extensions.md  metrics.md  modules.md  replay.md  schema.md  testing.md  walrus-enrichment.md
examples/: content_refs.json
migrations/postgres/: 001_reference.sql
migrations/sqlite/: 001_reference.sql
src/: analytics.rs  api.rs  config.rs  content.rs  lib.rs  main.rs  metrics.rs  normalized.rs  official_content.rs  pipeline.rs  schema.rs  site_analytics.rs  store.rs
tests/: api.rs  config.rs  content_enrichment.rs  normalized.rs  normalized_flow.rs
