[package]
name = "paperproof-indexer-reference"
version = "0.3.0"
edition = "2024"
description = "Reference indexer implementation for PaperProof Protocol"
license = "Apache-2.0"
repository = "https://github.com/PaperProofLabs/paperproof-indexer-reference"
readme = "README.md"

[dependencies]
async-trait = "0.1"
axum = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
paperproof-sdk-rs = { version = "0.3.0", features = ["async"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rusqlite = { version = "0.32", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[features]
default = []
sqlite = ["paperproof-sdk-rs/sqlite", "dep:rusqlite"]
postgres = ["paperproof-sdk-rs/postgres", "dep:tokio-postgres"]
sui-native = ["paperproof-sdk-rs/sui-native"]

[dev-dependencies]
tempfile = "3"
